--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
+apply plugin: 'war'
 
 group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
@@ -29,4 +30,6 @@ dependencies {
 	compileOnly 'org.projectlombok:lombok:1.18.2'
 	compile('mysql:mysql-connector-java')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
+
+	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
