--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ buildscript {
 apply plugin: 'java'
 apply plugin: 'eclipse'
 apply plugin: 'org.springframework.boot'
-apply plugin: 'war'
+//apply plugin: 'war'
 
 group = 'com.crud'
 version = '0.0.1-SNAPSHOT'
@@ -28,7 +28,8 @@ dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
 	compileOnly 'org.projectlombok:lombok:1.18.2'
-	compile('mysql:mysql-connector-java')
+//	compile('mysql:mysql-connector-java')
+	compile('org.postgresql:postgresql')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 
 //	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
