--- a/build.gradle
+++ b/build.gradle
@@ -27,12 +27,13 @@ repositories {
 dependencies {
 	compile('org.springframework.boot:spring-boot-starter-web')
 	testCompile('org.springframework.boot:spring-boot-starter-test')
-	compileOnly 'org.projectlombok:lombok:1.18.2'
+	compileOnly ('org.projectlombok:lombok:1.18.2')
 	compile('mysql:mysql-connector-java')
 //	compile('org.postgresql:postgresql')
 	compile('org.springframework.boot:spring-boot-starter-data-jpa')
 	compile('io.springfox:springfox-swagger2:2.7.0')
 	compile('io.springfox:springfox-swagger-ui:2.7.0')
+	compile ('org.springframework.boot:spring-boot-starter-mail:2.0.4.RELEASE')
 
 //	providedRuntime("org.springframework.boot:spring-boot-starter-tomcat")
 }
