--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,10 +17,11 @@ trello.login=konto_testowe2
 # EMAIL CONFIGURATION
 spring.mail.host=smtp.gmail.com
 spring.mail.port=587
-spring.mail.username=taskReminder33@gmail.com
-spring.mail.password=yztx2rjnhp8P
 spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
+
+#ADMINISTRATION
+admin.mail=eryk.ku@interia.pl
 
 
 #spring.jpa.database=postgresql
