--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -23,6 +23,7 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #ADMINISTRATION
+admin.name=Eryk Kurkiewicz
 admin.mail=eryk.ku@interia.pl
 
 #ACTUATOR
